# zeo

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Jenkinsfile  Jenkinsfile.publish-s3  LICENSE  MULTI_BOARD_REFACTOR_PLAN.md  README.md  UPSTREAMS.md  bug.py  build.ps1  build.py  go-appimage-zeo.yml  go-appimage.yml  licensesnip.config.jsonc  local_build.sh  mac_build.sh  noxfile.py  pyproject.toml  runkicad  symbols.ps1  test_api.py  zeo.sh
agent/: CMakeLists.txt  agent.cpp  agent.icns  agent_auth.cpp  agent_auth.h  agent_chat_history.cpp  agent_chat_history.h  agent_events.cpp  agent_events.h  agent_frame.cpp  agent_frame.h  agent_keychain.cpp  agent_llm_client.cpp  agent_llm_client.h  agent_openai_client_temp.cpp  agent_openai_client_temp.h  agent_state.cpp  agent_state.h  agent_thread.cpp  agent_thread.h  pending_changes_popup.cpp  pending_changes_popup.h  supabase_config.json
agent/auth/: agent_auth.cpp  agent_auth.h  agent_keychain.h
agent/bridge/: bridge_protocol.h  webview_bridge.cpp  webview_bridge.h
agent/claudecode/: cc_controller.cpp  cc_controller.h  cc_events.cpp  cc_subprocess.cpp  cc_subprocess.h
agent/cloud/: agent_cloud_sync.cpp  agent_cloud_sync.h
agent/core/: agent_tools.cpp  agent_tools.h  chat_controller.cpp  chat_controller.h  chat_events.h
agent/docs/: IPC_SYNC_PLAN.md
agent/model_context/: kipy_schematic_api_v1.txt  kipy_schematic_api_v2.txt  kipy_schematic_api_v3.txt  kipy_schematic_api_v4.txt  kipy_schematic_api_v5.txt
agent/platform/: macos_key_monitor.h  macos_key_monitor.mm  macos_webview_bg.h  macos_webview_bg.mm
agent/prompts/: core.md  plan.md
agent/rendering/: agent_html_template.cpp  agent_html_template.h  agent_markdown.cpp  agent_markdown.h  agent_template.html  embed_html.cmake  input_html_template.cpp  input_html_template.h  input_template.html
agent/tools/: CMakeLists.txt  agent_tools.cpp  agent_tools.h  kicad_cli_util.h  tool_handler.h  tool_registry.cpp  tool_registry.h  tool_schemas.cpp  tool_schemas.h
agent/tools/handlers/: check_status_handler.cpp  component_search_handler.cpp  component_search_handler.h  create_project_handler.cpp  create_project_handler.h  datasheet_handler.cpp  datasheet_handler.h  footprint_generator.cpp  footprint_generator.h  memory_handler.cpp  memory_handler.h  netclass_generator.cpp  netclass_generator.h  open_editor_handler.cpp  open_editor_handler.h  pcb_autoroute_handler.cpp  pcb_autoroute_handler.h  python_tool_handler.cpp  python_tool_handler.h  screenshot_handler.cpp  screenshot_handler.h  symbol_generator.cpp  symbol_generator.h  symbol_importer.cpp  symbol_importer.h
agent/tools/kicad_file/: file_writer.cpp  file_writer.h  sexpr_util.cpp  sexpr_util.h  uuid_util.cpp  uuid_util.h
agent/tools/pcb/: pcb_autoroute_handler.cpp  pcb_autoroute_handler.h  pcb_crud_handler.cpp  pcb_crud_handler.h  pcb_parser.cpp  pcb_parser.h  pcb_setup_handler.cpp  pcb_setup_handler.h  pcb_tool_handler.cpp  pcb_tool_handler.h  pcb_validator.cpp  pcb_validator.h
agent/tools/python/: tool_manifest.json
agent/tools/schematic/: sch_companion_handler.cpp  sch_companion_handler.h  sch_connect_net_handler.cpp  sch_connect_net_handler.h  sch_crud_handler.cpp  sch_crud_handler.h  sch_erc_handler.cpp  sch_erc_handler.h  sch_label_pins_handler.cpp  sch_label_pins_handler.h  sch_lib_symbol_handler.cpp  sch_lib_symbol_handler.h  sch_parser.cpp  sch_parser.h  sch_setup_handler.cpp  sch_setup_handler.h  sch_sim_handler.cpp  sch_sim_handler.h  sch_tool_handler.cpp  sch_tool_handler.h  sch_util_handler.cpp  sch_util_handler.h  sch_validator.cpp  sch_validator.h
agent/tools/screenshot/: screenshot_handler.cpp  screenshot_handler.h
agent/tools/util/: file_writer.cpp  kicad_cli_util.h  process_util.h  sch_parser.cpp  sch_parser.h  svg_rasterizer.cpp  svg_rasterizer.h
agent/ui/: file_attach.cpp  file_attach.h  history_panel.cpp  history_panel.h  image_attach.cpp  image_attach.h  pending_changes_popup.cpp  pending_changes_popup.h
agent/view/: agent_markdown.cpp  agent_markdown.h  file_attach.cpp  file_attach.h  unified_html_template.cpp  unified_html_template.h  unified_template.html
kicad_agent/: CMakeLists.txt  kicad_agent.cpp  kicad_agent_frame.cpp  kicad_agent_frame.h
pcbnew/autoroute/: AUDIT_REPORT.md  AUTOROUTING.md  CMakeLists.txt  autoroute.cpp  autoroute.h  autoroute_control.h  autoroute_engine.cpp  autoroute_engine.h
pcbnew/autoroute/differential/: differential_pair.cpp  differential_pair.h
pcbnew/autoroute/expansion/: drill_page.cpp  drill_page.h  drill_page_array.cpp  drill_page_array.h  expansion_door.cpp  expansion_door.h  expansion_drill.cpp  expansion_drill.h  expansion_room.cpp  expansion_room.h  item_autoroute_info.cpp  item_autoroute_info.h  target_door.cpp  target_door.h
pcbnew/autoroute/fanout/: fanout_router.cpp  fanout_router.h
pcbnew/autoroute/geometry/: tile_shape.cpp  tile_shape.h
pcbnew/autoroute/insert/: insert_connection.cpp  insert_connection.h
pcbnew/autoroute/length_match/: length_matcher.cpp  length_matcher.h
pcbnew/autoroute/locate/: locate_connection.cpp  locate_connection.h
pcbnew/autoroute/optimize/: pull_tight.cpp  pull_tight.h  (+2 more)
signing/: CMakeLists.txt
src/zeo-rust/: .gitlab-ci.yml  .licensesnip  .licensesnipignore  Cargo.toml
terminal/: CMakeLists.txt  agent_monitor_log.cpp  agent_monitor_log.h  agent_pty_terminal_panel.h  headless_python_executor.cpp  headless_python_executor.h  pty_handler.cpp  pty_handler.h  pty_terminal_panel.cpp  pty_terminal_panel.h  pty_webview_panel.cpp  pty_webview_panel.h  python_exec_thread.cpp  python_exec_thread.h  terminal.cpp  terminal.icns  terminal_command_validator.cpp  terminal_command_validator.h  terminal_frame.cpp  terminal_frame.h  terminal_panel.cpp  terminal_panel.h  terminal_panel_agent.cpp  tool_script_loader.cpp  tool_script_loader.h  vterm_handler.h
tools/: CMakeLists.txt  zeo
tools/zeo-mcp/: zeo-mcp.cpp
vcs/: CMakeLists.txt  git_vcs_bridge.cpp  kicad_file_renderer.h  vcs.cpp  vcs_frame.cpp  vcs_frame.h  vcs_ipc_handler.cpp  vcs_ipc_handler.h  vcs_template.html
(+1740 files in other folders)
